welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:66: error: not found: value aireC
  aireC()
  ^